plugins {
    id 'java'
    id 'jacoco'
//    id 'eclipse' //uncomment when using eclipse IDE
//    id 'idea' // uncomment when using IntelliJ IDEA IDE
}

// Add compiler option to show more details for deprecations
/*tasks.withType(JavaCompile).configureEach {
    doFirst {
        println "Compiler args: ${options.compilerArgs}"
    }

    options.compilerArgs.add("-Xlint:deprecation")
    //options.compilerArgs.add("-Xlint:unchecked")
}*/

group = 'pl.otros.logviewer'
version = '1.4.19-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(Test).configureEach {
    useTestNG()
    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED',
            '--add-opens', 'java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED'
}


repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.pushing-pixels:radiance-theming:9.0.0'
    implementation 'org.pushing-pixels:radiance-animation:9.0.0'
    implementation 'commons-net:commons-net:3.13.0'
    implementation 'org.jcommander:jcommander:3.0'
    implementation 'com.google.guava:guava:33.6.0-jre'
    implementation 'com.google.code.gson:gson:2.14.0'
    implementation 'com.github.mwiede:jsch:2.28.4'
    implementation 'com.jcraft:jzlib:1.+'
    implementation 'com.miglayout:miglayout-swing:4.2'
    implementation 'com.fifesoft:rsyntaxtextarea:2.6.1'
    implementation 'commons-codec:commons-codec:1.+'
    implementation 'commons-collections:commons-collections:3.2.1'
    implementation 'commons-configuration:commons-configuration:1.+'
    implementation 'commons-io:commons-io:2.+'
    implementation 'commons-lang:commons-lang:2.+'
    implementation 'org.apache.commons:commons-csv:1.4'
    implementation 'commons-logging:commons-logging:1.1.1'
    implementation 'org.apache.logging.log4j:log4j-api:2.17.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'

    //jna is needed for the PageantConnector to use the Pageant with sftp connections
    implementation 'net.java.dev.jna:jna-jpms:5.19.1'
    implementation 'net.java.dev.jna:jna-platform-jpms:5.19.1'

    //Not used anymore?
//    implementation 'org.apache.commons:commons-compress:1.28.0'

    implementation 'org.apache.commons:commons-vfs2:2.10.0'
    //httpclient5 is needed to load logfiles via vfs2
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1'

    implementation 'org.swinglabs.swingx:swingx-all:1.+'
    implementation 'org.swinglabs:jxlayer:3.0.4'
    implementation 'org.ocpsoft.prettytime:prettytime:5.0.9.Final'
    implementation 'ch.qos.logback:logback-core:1.5.38'
    implementation 'ch.qos.logback:logback-classic:1.5.38'
    implementation 'org.slf4j:slf4j-api:2.0.18'
    testImplementation 'org.testng:testng:6.8.8'
    testImplementation 'org.mockito:mockito-core:5.23.0'
    testImplementation 'org.assertj:assertj-core:3.6.2'
    testImplementation 'org.awaitility:awaitility:4.3.0'
    testImplementation 'org.assertj:assertj-swing-testng:3.17.1'
}